python-openstackdocstheme (1.4.0+dfsg1-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Wed, 27 Jul 2016 11:22:32 +0200

python-openstackdocstheme (1.3.0+dfsg1-1) unstable; urgency=medium

  * Team upload.
  * New upstream release
  * Fixed VCS URLs (https).
  * d/rules: Changed UPSTREAM_GIT protocol to https
  * Removed d/p/allow-any-pbr-version.patch (Applied upstream)
  * Rebased d/p/patch-out-external-references.patch
  * Rearranged build depends for new release
  * d/copyright
    - Added Files-Excluded for non-DFSG files
    - Added myself for Debian part
  * Bumped standards version to 3.9.8 (no changes needed)
  * Don't override dh_auto_clean
  * Added libjs-bootstrap to dependencies
  * Symlink Bootstrap JS lib during build
  * Use *.install and *.links inside of calling cp/ln in d/rules
  * Added d/p/use-libjs-jquery.patch
  * Removed python-openstackdocstheme-doc - it didn't contained docs of this
    package, but build of example theme usage

 -- Ondřej Nový <onovy@debian.org>  Sun, 17 Jul 2016 23:06:22 +0200

python-openstackdocstheme (1.2.5+dfsg1-1) unstable; urgency=medium

  * Initial release. (Closes: #807039)

 -- Thomas Goirand <zigo@debian.org>  Mon, 05 Oct 2015 10:48:26 +0200