@@ -2,6 +2,7 @@ python-openstackdocstheme (1.4.0+dfsg1-1) experimental; urgency=medium
 
   * New upstream release.
   * Fixed (build-)depends for this release.
+  * Using pkgos-dh_auto_install from openstack-pkg-tools >= 52~.
 
  -- Thomas Goirand <zigo@debian.org>  Wed, 27 Jul 2016 11:22:32 +0200
 
